--- a/styles/budaya.css
+++ b/styles/budaya.css
@@ -309,7 +309,7 @@ nav ul li a {
     width: 600px;
     height: 400px;
     border-radius: 1.5rem;
-    border: 2px dashed var(--primaryIconColor);
+    border: 2px dashed var(--primaryBgColor);
 }
 
 .img-data {
@@ -376,16 +376,6 @@ nav ul li a {
 
 /* end of senjata tradisional */
 
-/* budaya */
-
-/* #budaya {
-    background: #1e1f21;
-    color: #fff;
-    padding: 0 2rem;
-    position: relative;
-    display: inline-block;
-    width: 100%;
-} */
 
 .wrapper {
     padding: 10px 10%;
