--- a/styles/budaya.css
+++ b/styles/budaya.css
@@ -48,21 +48,21 @@ p {
     line-height: 1.2rem;
 }
 
-p, span, label, input, textarea, li {
-    color: var(--secondaryTextColor);
+p, label, input, textarea, li {
+    color: var(--primaryTextColor);
 }
 
 a {
     text-decoration: none;
 }
 
-.main {
+/* .container-head {
     width: 1200px;
     margin: 0 auto;
-}
+} */
 
 @media screen and (max-width: 1200px) {
-    .main {
+    .container-head {
         width: 90%;
     }
 }
@@ -70,8 +70,8 @@ a {
 /* head */
 .container-head {
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(/img/jakarta-hi720.jpg);
+    height: 120vh;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(/img/bg-jakarta.jpg);
     background-position: center;
     background-size: cover;
     padding-left: 6%;
@@ -79,138 +79,111 @@ a {
     box-sizing: border-box;
 }
 
-.navbar {
-    height: 12%;
-    display: flex;
-    /* position: fixed; */
-    align-items: center;
-}
-
-.menu-icon {
-    width: 30px;
-    cursor: pointer;
-    margin: 40px;
-}
-
-nav {
-    flex: 1;
-    text-align: right;
-}
-
-nav ul li {
-    list-style: none;
-    display: inline-block;
-    margin-left: 3.75rem;
-
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: var(--primaryTextColor);
-    font-size: 0.9rem;
-}
-
-.row {
-    display: flex;
-    height: 80%;
-    align-items: center;
-}
-
-.col {
-    flex-basis: 50%;
-}
-
-.col h1 {
-    color: var(--primaryTextColor);
-    font-size: 3.3rem;
-}
-
-.col p {
-    color: var(--primaryTextColor);
-    font-size: .85rem;
-    line-height: 1rem;
-}
-
-.col button {
-    width: 6rem;
-    color: #000000;
-    background: #fff;
-    font-size: .8;
-    padding: .8rem 0;
-    border: 0;
-    border-radius: 1.25rem;
-    outline: none;
-    margin-top: 1.875rem;
-}
-
-.hcard {
-    width: 200px;
-    height: 230px;
-    display: inline-block;
-    position: relative;
-    /* display: contents; */
-    border-radius: 10px;
-    padding: 15px 25px;
-    box-sizing: border-box;
-    cursor: pointer;
-    margin: 10px 15px;
-    background-position: center;
-    background-size: cover;
-    transition: transform 0.5s;
-}
-
-.hcard1 {
-    background-image: url(/img/monas1.jpg);
-}
-.hcard2 {
-    background-image: url(/img/monas1.jpg);
-}
-.hcard3 {
-    background-image: url(/img/monas1.jpg);
-}
-.hcard4 {
-    background-image: url(/img/monas1.jpg);
-}
-
-.hcard:hover {
-    transform: translateY(-10px);
-}
-
 /* end head */
 
 /* titles */
 .section-title {
-    margin:  1rem 0 4rem;
+    margin: 1rem 0 4rem;
     font-size: 2rem;
 }
 
 .pre-title {
-    color: var(--secondaryTextColor);
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    color: var(--secondaryBgColor);
     position: relative;
+    padding-left: 40px;
+    width: fit-content;
     font-weight: 400;
     font-size: 0.9rem;
+    top: 5rem;
 }
 
-.logo {
+.pre-title::before {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background: var(--lineColor);
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 50%;
+}
+
+/* layout */
+
+
+/* logo san Navigasi */
+.nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 0;
+}
+
+.nav ul {
+    list-style: none;
+    display: flex;
+    gap: 3rem;
+}
+
+.nav ul li {
     display: flex;
     align-items: center;
-    font-weight: 700;
-    font-size: 1.7rem;
 }
 
-.logo a {
-    color: var(--primaryIconColor);
+.nav ul li a {
+    color: var(--primaryTextColor);
 }
 
-.logo a:hover {
+.nav ul li a:hover{
     color: var(--primaryIconColorHover);
+}
+
+.jkt {
+    display: flex;
+    align-items: center;
+    font-weight: 800;
+    font-size: 2rem;
+}
+
+.jkt a {
+    color: var(--primaryTextColor);
+}
+.jkt a:hover {
+    color: var(--primaryIconColorHover);
+}
+
+/* hero section */
+#hero {
+    height: 720px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.hero-name {
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 0.5rem 0 1rem;
+}
+
+.hero-name span {
+    color: var(--primaryIconColorHover);
+}
+
+.hero-right img {
+    width: 60%;
+}
+
+.hero-right {
+    display: flex;
+    justify-content: center;
 }
 
 
 
 
 /* senjata tradisioanl */
-
 .container-lokal {
     display: grid;
     place-items: center;
@@ -264,6 +237,7 @@ nav ul li a {
 
 .card-description {
     display: block;
+    color: var(--secondaryTextColor);
     font-size: .8rem;
     margin-bottom: .27rem;
 }
@@ -272,7 +246,7 @@ nav ul li a {
     font-size: 1.5rem;
     font-weight: 500;
     color: var(--secondaryTextColor);
-    margin-bottom: .75rem;
+    /* margin-bottom: .75rem; */
 }
 
 .card-article:hover .card-data {
@@ -306,10 +280,11 @@ nav ul li a {
 }
 
 .rumah-img {
-    width: 600px;
-    height: 400px;
+    width: 550px;
+    height: 350px;
     border-radius: 1.5rem;
-    border: 2px dashed var(--primaryBgColor);
+    /* border: 2px dashed var(--primaryBgColor); */
+    /* width: 90%; */
 }
 
 .img-data {
@@ -373,7 +348,6 @@ nav ul li a {
         overflow: hidden;
     }
 }
-
 /* end of senjata tradisional */
 
 
@@ -381,6 +355,11 @@ nav ul li a {
     padding: 10px 10%;
     /* display: inline-block; */
     position: relative;
+}
+
+.wrapper {
+    justify-content: center;
+    align-items: center;
 }
 
 .box-area {
@@ -400,6 +379,7 @@ nav ul li a {
 
 .box img {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
     display: block;
     position: relative;
@@ -440,5 +420,5 @@ nav ul li a {
 }
 
 .box:hover .overlay {
-    height: 410px;
+    height: 440px;
 }
